fix button breaking on separate line on narrow screens

--- a/src/_component/text-image/text-image-mobile.sass
+++ b/src/_component/text-image/text-image-mobile.sass
@@ -28,6 +28,7 @@
     margin: 1rem 0
     border-radius: 0.5rem
     transition: 250ms
+    white-space: nowrap
 
     &:hover
       background-color: var(--color-dark)
